<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_0_x_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_0_x"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_0_y_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_0_y"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_0_z_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_0_z"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<View 
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#00FF00"
		android:layout_marginTop="2dip" 
	    android:layout_marginBottom="2dip"
	    />
	
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_1_x_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_1_x"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_1_y_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_1_y"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_1_z_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_1_z"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<View 
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#00FF00"
		android:layout_marginTop="2dip" 
	    android:layout_marginBottom="2dip" 
	    />
	
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_2_x_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_2_x"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_2_y_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_2_y"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="20px">
		<TextView
			android:text="@string/magnometer_2_z_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/magnometer_2_z"
			android:text="Undefined"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	
	<View 
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#00FF00"
		android:layout_marginTop="2dip" 
	    android:layout_marginBottom="2dip"   
	    />
</LinearLayout>